--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,21 @@ main
 *.exe
 *.out
 *.app
+
+
+#cmake
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+
+#ninja
+.ninja_log
+.ninja_deps
+build.ninja
+rules.ninja
